--- a/common/base.scss
+++ b/common/base.scss
@@ -3,11 +3,11 @@ table {border-collapse: collapse;border-spacing: 0;} 
 fieldset,img {border: 0;} 
 address,caption,cite,code,dfn,em,strong,th,var {font-weight: normal;font-style: normal;} 
 ol,ul {list-style: none;} 
-caption,th {text-align: left;} 
-h1,h2,h3,h4,h5,h6 {font-weight: normal;font-size: 100%;} 
+caption,th {text-align: left;}
+h1,h2,h3,h4,h5,h6 {} 
 q:before,q:after {content:'';} 
 abbr,acronym {border: 0;}
-body{font-family: PingFang SC Light, Lantinghei SC, Helvetica Neue, Helvetica, Arial, Microsoft YaHei, STHeitiSC-Light, simsun, 'sans-serif';}
+body{font-family: Microsoft YaHei;}
 .hide{display: none;}
 .fl{float: left;}
 .fr{float: right};
