--- a/common/base.scss
+++ b/common/base.scss
@@ -4,7 +4,7 @@ fieldset,img {border: 0;} 
 address,caption,cite,code,dfn,em,strong,th,var {font-weight: normal;font-style: normal;} 
 ol,ul {list-style: none;} 
 caption,th {text-align: left;}
-h1,h2,h3,h4,h5,h6 {} 
+p,li{margin: 5px 0;line-height: 20px;}
 q:before,q:after {content:'';} 
 abbr,acronym {border: 0;}
 body{font-family: Microsoft YaHei;}
