--- a/common/base.scss
+++ b/common/base.scss
@@ -2,7 +2,7 @@ body,div,dl,dt,dd,ul,ol,li,h1,h2,h3,h4,h5,h6,pre,form,fieldset,input,textarea,p,
 table {border-collapse: collapse;border-spacing: 0;} 
 fieldset,img {border: 0;} 
 address,caption,cite,code,dfn,em,strong,th,var {font-weight: normal;font-style: normal;} 
-ol,ul {list-style: none;} 
+ol,ul {padding-left: 20px;} 
 caption,th {text-align: left;}
 p,li{margin: 5px 0;line-height: 20px;}
 q:before,q:after {content:'';} 
